nav부분 fixed 추가와 z-index 오류 수정 / 메인콘텐츠 wrap 구성및 정렬

--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,29 @@
     text-align: center;
 
 }
+.nav_wrap{
+    width:100%;
+    height:70px;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    z-index: 9999;
+    
+
+}
 
 nav {
     /*nav전체 프레임*/
     margin: 0 auto;
+    left:0;
+    right:0;
     width: 80%;
     height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    z-index: 9999;
 
 }
 
@@ -91,15 +105,23 @@ nav {
     height: 100%;
     position: fixed;
     right: 0px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     visibility: hidden;
     transform: translateX(100%);
     transition: 0.5s;
-    opacity: 25%;
-    color: white;
+    z-index: 1;
+    border: 1px solid gray;
 }
 
-@media(max-width:780px) {
+.main_wrap{
+    margin: 0 auto;
+    width:80%;
+    height:1080px;
+    background-color: rgb(175, 175, 175);
+}
+
+
+@media(max-width:1024px) {
 
     /*모바일크기 레이아웃*/
     #main_menu {
@@ -124,7 +146,7 @@ nav {
         width: 100%;
     }
 
-
+    .main_wrap{width:100%;}
 
 }
 
